fixed fpm base config

--- a/conf/fpm_sample.conf
+++ b/conf/fpm_sample.conf
@@ -30,12 +30,12 @@ catch_workers_output = yes
 env[HOSTNAME] = $HOSTNAME
 env[TMP] = /data/phptemp
 env[TMPDIR] = /data/phptemp
-env[TEMP] = /data/phptmep
+env[TEMP] = /data/phptemp
 env[DOCUMENT_ROOT] = /data/web/_sample_/www
 ; If needed: Oracle env
-; env[ORACLE_HOME] = /usr/lib/oracle/11.2/client64
-; env[LD_LIBRARY_PATH] = /usr/lib/oracle/11.2/client64/lib
-; env[NLS_LANG] = "FRENCH_FRANCE.UTF8"
+; env[ORACLE_HOME]=/usr/lib/oracle/11.2/client64
+; env[LD_LIBRARY_PATH]=/usr/lib/oracle/11.2/client64/lib
+; env[NLS_LANG]="FRENCH_FRANCE.UTF8"
 
 ; Additional php.ini defines, specific to this pool of workers. These settings
 
@@ -47,8 +47,8 @@ php_admin_value[max_input_time]=120
 php_admin_value[post_max_size]="50M"
 
 ; Php Logs
-php_admin_flag[log_errors] = on
-php_admin_value[error_log] = /data/web/_sample_/logs/php_errors.log
+php_admin_flag[log_errors]=on
+php_admin_value[error_log]="/data/web/_sample_/logs/php_errors.log"
 ; php_flag[display_errors] = on
 php_admin_value[display_errors]=0
 php_admin_value[display_startup_errors]=0
@@ -58,7 +58,7 @@ php_value[max_input_time]="120"
 php_value[max_execution_time]="300"
 php_value[memory_limit]="128M"
 
-; Sessions 
+; Sessions
 php_value[session.gc_maxlifetime]=3600
 php_admin_value[session.gc_probability]=1
 php_admin_value[session.gc_divisor]=100
